pkg/gox/testdata/errors/fragment_closing_mismatch.gox
package demo

func View() any {
	return <main></>
}
